--- a/src/components/Flag.astro
+++ b/src/components/Flag.astro
@@ -27,7 +27,12 @@ const { src, country, link, vertical } = Astro.props;
 
     figure {
         width: 5rem;
+        margin: 0;
         /* padding: 1rem; */
+    }
+
+    a {
+        display: block;
     }
 
     .vertical {
