--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,8 @@ interface FlagSpec {
 ---
 
 <Base
-  title="Flag Building"
-  description="An attempt at a replica of the flag arrangement in the Flag Building at Georgia Tech."
+  title="Georgia Tech Flag Building (Smithgall Building)"
+  description="Unofficial catalogue of the flags in the Flag Building at Georgia Tech."
 >
   <header>
     <marquee width="500">⚠️ Work In Progress! ⚠️</marquee>
