Fix layout on wide screens
Resolves #9

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,6 +57,8 @@ interface FlagSpec {
 <style>
   .blocks {
     display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
     flex-direction: column;
     gap: 5rem;
   }
