Add link to source code

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,10 @@ interface FlagSpec {
     </ol>
   </div>
 
-  <footer>Flag data last updated (manually) in September 2024.</footer>
+  <footer>
+    <a href="https://github.com/shreyasminocha/flagbuild.ing">Flag data</a> last
+    updated (manually) in September 2024.
+  </footer>
 </Base>
 
 <style>
