Fix Nepal and Nigeria layout
Resolves #6

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,4 +100,14 @@ interface FlagSpec {
     grid-column: span 6;
     margin: 0 auto;
   }
+
+  #ne {
+    transform-origin: left top;
+    transform: scale(0.8);
+  }
+
+  #np {
+    transform-origin: left top;
+    transform: scaleY(-1) scale(0.65) rotate(-90deg);
+  }
 </style>
