--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,4 +110,8 @@ interface FlagSpec {
     transform-origin: left top;
     transform: scaleY(-1) scale(0.65) rotate(-90deg);
   }
+
+  #block-two li:nth-child(7) {
+    grid-column: 1;
+  }
 </style>
