--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,8 +15,7 @@
 }
 
 body {
-  width: 95%;
-  margin: 2rem 2rem;
+  margin: 2rem;
   font-size: 1rem;
   line-height: 1.35;
   font-family: var(--body-font);
